$Id$

2014-06-19  Douglas Gilbert  <dgilbert@interlog.com>

	scsiprint.cpp:
	- minor comment clean-up

2014-06-19  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Intel 730 and DC S3500/S3700 Series SSDs: rename, add 730 and S3700.
	Remove extra S3700 entry.  Based on patch provided by Tim Small.

2014-06-18  Christian Franke  <franke@computer.org>

	os_win32.cpp: Fix CSMI support for older Intel RST drivers which set
	bPortIdentifier=0xff (regression from r3888).
	os_win32/installer.nsi: Create standard InstallLocation registry entry.
	Keep old Install_Dir entry if needed for GSmartControl.
	Update links in registry and shortcuts.

2014-06-18  Christian Franke  <franke@computer.org>

	drivedb.h:
	- USB: Buffalo MiniStationHD-PCFU3 (0x0411:0x0240)
	- USB: Toshiba Stor.E Plus (0x0480:0xa00a) (Debian bug 734395)
	- USB: Samsung D3 Station (0x04e8:0x6124) (ticket #332)
	- USB: Samsung M3 Portable (0x04e8:0x61b[45])
	- USB: Seagate Expansion Portable (0x0bc2:0x2312)
	- USB: Seagate Expansion External (0x0bc2:0x3312) (ticket #320)
	- USB: WD Elements (0x1058:0x10[ab]8) (ticket #331)
	- USB: ASMedia AS2105 (0x174c:0x5136)

2014-06-16  Christian Franke  <franke@computer.org>

	drivedb.h:
	- Seagate Laptop Thin HDD
	- Seagate Barracuda 7200.14 (AF): *DM000 variant
	- Seagate Barracuda Green (AF): no warnings for newer firmware versions
	- Seagate Constellation.2 (SATA)
	- Seagate NAS HDD
	- Seagate Video 3.5 HDD

2014-06-15  Christian Franke  <franke@computer.org>

	drivedb.h, smartctl.8.in, smartd.8.in, INSTALL, NEWS, TODO, WARNINGS:
	Fix old Trac links.

2014-05-23 Alex Samorukov  <samm@os2.kiev.ua>

	os_freebsd.cpp: fixed #321 (compiler warning on 32 bit architectures),
	patch provided by tijl

2014-05-01  Christian Franke  <franke@computer.org>

	os_linux.cpp: Clarify copyright info in GPL header.
	smartctl.8.in, smartd.conf.5.in: Update '-d aacraid' info.

2014-04-30  Douglas Gilbert  <dgilbert@interlog.com>

	scsiprint.cpp: